--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,9 @@
   <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %>
   <%= analytics_tag %>
-  <link href='http://fonts.googleapis.com/css?family=Neuton' rel='stylesheet' type='text/css'></head>
+<link href='http://fonts.googleapis.com/css?family=IM+Fell+Great+Primer' rel='stylesheet' type='text/css'></head>
+<link href='http://fonts.googleapis.com/css?family=Coming+Soon' rel='stylesheet' type='text/css'><body>
+<link rel="shortcut icon" href="favicon.ico">
 </head>
 <body>
 
