--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,8 +18,8 @@
   <body>
     <div id='header'>
       <a href="http://github.com/tenderlove/rubycommitters.org">
-      <img style="position: absolute; top: 0; right: 0; border: 0;"
-    src="https://assets2.github.com/img/e6bef7a091f5f3138b8cd40bc3e114258dd68ddf?repo=&url=http%3A%2F%2Fs3.amazonaws.com%2Fgithub%2Fribbons%2Fforkme_right_red_aa0000.png&path=" alt="Fork me onGitHub"></a>
+      <img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png"
+    alt="Fork me on GitHub"></a>
       <div class='shell'>
         <div class='cl'>&nbsp;</div>
         <div id='navigation'>
