fixed css and image

--- a/app/views/accounts/_account.html.erb
+++ b/app/views/accounts/_account.html.erb
@@ -35,7 +35,7 @@
 
 <div class="body">
 
-<div class="sites section">
+<div class="sites">
 <% unless account.sites.empty? %>
 <h3 class="caption">Sites</h3>
 <ul>
@@ -45,7 +45,7 @@
 </div>
 
 
-<div class="books section">
+<div class="books">
 <% unless account.books.empty? %>
 <h3 class="caption">Books</h3>
 <ul>
