--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -8,5 +8,5 @@
 </ul>
 </div>
 <div id="footer">
-<p class="copy">Ruby comitters</p>
+	<p class="copy"><span>Copyright &copy; 2011</span> RubyCommitters.org</p>
 </div>
