--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -352,6 +352,7 @@ li.committer .body h3 {
 #footer p.copy span {
 	font-size: 16px;
 	font-weight: 400;
+	margin-right: 10px;
 	}
 .dialog {
 	margin-top: 50px;
