add meta info; foxes

--- a/app/views/accounts/_account.html.erb
+++ b/app/views/accounts/_account.html.erb
@@ -1,100 +1,44 @@
-<li class="account" style="width: 900px; background-color: #222; background: url(/images/foo.jpg); margin: 20px; padding: 10px; list-style: none; box-shadow: -5px 5px 0px #555;">
-  <div class="picture" style="float: right;">
+<li class="account">
+  <div class="picture">
     <div class="image-wrapper">
       <% if File.exist?(Rails.root.join('public', 'images', 'people', 'lines', "#{account.username}.png").to_s) -%>
         <%= image_tag "people/lines/#{account.username}.png", :onmouseover => "this.src = this.src.replace(/lines/, 'photos').replace(/png/, 'jpg');", :onmouseout => "this.src = this.src.replace(/photos/, 'lines').replace(/jpg/, 'png');" -%>
       <% else -%>
-        <%= image_tag "people/lines/fox.png", :onmouseover => "this.src = this.src.replace(/lines/, 'photos')", :onmouseout => "this.src = this.src.replace(/photos/, 'lines')" -%></div>
+        <%= image_tag "people/lines/fox#{@fox_count}.png", :onmouseover => "this.src = this.src.replace(/lines/, 'photos')", :onmouseout => "this.src = this.src.replace(/photos/, 'lines')" -%>
+        <% @fox_count = @fox_count % 3 + 1 -%>
       <% end -%>
     </div>
   </div>
-  <div style="float: right; clear: right;"></div>
 
+  <div class="name">
+      <span class="username"><%= account.username -%></span>
 
-  <div class="name" style="font-family: Helvetica, sans-serif; line-height: 1.4em;">
-    <div style="text-transform: uppercase; font-size: 1.3em; padding-bottom: 10px;"><%= account.username -%></div>
-    <% [account.names, account.nicks].flatten.slice(0,3).each do |name| -%>
-      <div style="color: #AAA; font-size: 0.8em;"><small style="font-size: 0.6em;">AKA</small> &ldquo;<%= name.value -%>&rdquo;</div>
-    <% end -%>
+      <span class="nicknames">
+        <% [account.names, account.nicks].flatten.slice(0,5).each do |name| -%>
+          <span class="nick">
+            <small>AKA</small>
+            &ldquo;<%= name.value -%>&rdquo;
+          </span>
+        <% end -%>
+      </span>
+    </div>
+  </div>
+
+  <div class="sites">
+    <%= render :partial => 'site', :collection => account.sites -%>
+    <span class="books">
+      <% if account.books.present? -%>
+        Books: &nbsp;
+        <% account.books.each_with_index do |book, i| %>
+          <a href="http://www.amazon.<%= book.key.match(/^4/) ? "co.jp":"com" %>/dp/<%= book.key %>"><%= i + 1 -%></a> &nbsp;
+        <% end %>
+      <% end -%>
+    </span>
+  </div>
+
+  <div class="services">
+    <%= render :partial => 'service', :collection => account.services -%>
   </div>
 
   <div style="clear: both;"></div>
 </li>
-
-<% if false -%>
-  <table>
-    <tr>
-      <td>Account:</td>
-      <td><%= account.username %></td>
-    </tr>
-
-    <% unless account.names.empty? %>
-      <tr>
-        <td>Names:</td>
-        <td>
-          <ul>
-            <%= render :partial => 'name', :collection => account.names %>
-          </ul>
-        </td>
-      </tr>
-    <% end %>
-
-    <% unless account.nicks.empty? %>
-      <tr>
-        <td>Nicknames:</td>
-        <td>
-          <ul>
-            <%= render :partial => 'name', :collection => account.nicks %>
-          </ul>
-        </td>
-      </tr>
-    <% end %>
-
-    <% unless account.sites.empty? %>
-      <tr>
-        <td>Sites:</td>
-        <td>
-          <ul>
-            <%= render :partial => 'site', :collection => account.sites %>
-          </ul>
-        </td>
-      </tr>
-    <% end %>
-
-    <% unless account.services.empty? %>
-      <tr>
-        <td>Services:</td>
-        <td>
-          <ul>
-            <%= render :partial => 'service', :collection => account.services %>
-          </ul>
-        </td>
-      </tr>
-    <% end %>
-
-    <% unless account.portraits.empty? %>
-      <tr>
-        <td>Portraits:</td>
-        <td>
-          <ul>
-            <%= render :partial => 'portrait', :collection => account.portraits %>
-          </ul>
-        </td>
-      </tr>
-    <% end %>
-
-    <% unless account.books.empty? %>
-      <tr>
-        <td>Books:</td>
-        <td>
-          <ul>
-            <% account.books.each do |book| %>
-              <li><a href="http://www.amazon.<%= book.isbn.match(/^4/) ? "co.jp":"com" %>/dp/<%= book.isbn %>"><%= book.key %></a></li>
-            <% end %>
-          </ul>
-        </td>
-      </tr>
-    <% end %>
-  </table>
-</li>
-<% end -%>
