--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,10 +10,14 @@
 <body>
 
   <div id="header">
-    <img src="/images/header2.jpg" alt="Ruby Committers" />
+    <div id="title">Ruby Committers</div>
   </div>
 
 <%= yield %>
+
+  <div id="footer">
+    &copy; 2011 RubyCommitters.org
+  </div>
 
 </body>
 </html>
