--- a/app/views/accounts/_service.html.erb
+++ b/app/views/accounts/_service.html.erb
@@ -1,3 +1,2 @@
-<li>
-  <%= link_to_service service.name, service %>
-</li>
+<%= link_to_service image_tag("social/#{service.name}.png"), service %>
+
