--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -1,10 +1,18 @@
+@font-face {
+    font-family: "MunroSmall";
+    src: url(/fonts/munro_small.ttf);
+    font-weight:400;
+}
+
 body {
  margin: 0;
  padding: 0;
  background-color: #181818;
-  background: #FFF url(/images/header-bg.png);
+ background: #FFF url(/images/header-bg.png);
  color: #FFF;
+ font-family: Helvetica, Arial, sans-serif;
 }
+
 .image-wrapper {
   height: 100px;
 }
@@ -16,5 +24,89 @@ body {
 #header {
   background: #FFF url(/images/header-bg.png);
   height: 383px;
-  margin-bottom: -23px;
+  margin-bottom: -13px;
+}
+
+#title {
+  background: url(/images/header2.jpg) top left no-repeat;
+  width: 957px;
+  height: 413px;
+  text-indent: -10000px;
+}
+
+.sites a {
+  color: #EEE;
+  font-size: 0.6em;
+  line-height: 3.3em;
+}
+
+.services {
+  padding-top: 5px;
+  line-height: 2em;
+}
+
+.sites a {
+  background-color: #EEE;
+  color: #000;
+  padding: 3px 6px;
+  border-radius: 9px;
+  -moz-border-radius: 9px;
+  -o-border-radius: 9px;
+  -webkit-border-radius: 9px;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.sites .books {
+  text-transform: uppercase;
+  font-size: 0.8em;
+  color: #888;
+}
+
+.sites .books a {
+  color: #000;
+  text-decoration: none;
+}
+
+.username {
+  font-family: "MunroSmall";
+  font-size: 2em;
+}
+
+.nick {
+  color: #AAA;
+  font-size: 0.6em;
+}
+
+.nick small {
+  font-size: 0.6em;
+}
+
+li.account {
+  max-width: 900px;
+  background-color: #222;
+  background: url(/images/foo.jpg);
+  margin: 20px;
+  padding: 10px;
+  list-style: none;
+  box-shadow: -5px 5px 0px #555;
+}
+
+li.account div.picture {
+  float: right;
+}
+
+li.account div.name {
+  font-family: Helvetica, sans-serif;
+  line-height: 1.4em;
+  text-transform: uppercase;
+  font-size: 1.3em;
+}
+
+#footer {
+  margin-left: 20px;
+  height: 77px;
+  background: url(/images/foxes.png) top left no-repeat;);
+  padding: 20px 0 0 70px;
+  color: #000;
 }
